k8s/api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: ClusterIP
  selector:
    app: api-app
  ports:
    - port: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-app
  template:
    metadata:
      labels:
        app: api-app
    spec:
      volumes:
        - name: secret-volume
          secret:
            secretName: cassandra-secret
      containers:
        - name: api-container
          image: kpatel20538/bookstore-app:api
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: 256Mi
              cpu: 200m
            requests:
              memory: 256Mi
              cpu: 200m
          
          volumeMounts:
            - name: secret-volume
              readOnly: true
              mountPath: "/etc/secret"
