k8s/neo4j-service.yml
apiVersion: v1
kind: Service
metadata:
  name: neo4j-service
spec:
  type: ClusterIP
  selector:
    app: neo4j-app
  ports:
    - name: http
      port: 7474
    - name: https
      port: 7473
    - name: bolt
      port: 7687
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: neo4j-stateful-set
spec:
  serviceName: neo4j-service
  replicas: 1
  selector:
    matchLabels:
      app: neo4j-app
  template:
    metadata:
      labels:
        app: neo4j-app
    spec:
      containers:
        - name: neo4j-container
          image: neo4j
          ports:
            - containerPort: 7474
            - containerPort: 7473
            - containerPort: 7687
          resources:
            requests:
              cpu: 400m
              memory: 512Mi
            limits:
              cpu: 400m
              memory: 512Mi
          volumeMounts:
            - name: neo4j-pvc
              subPath: "data-0"
              mountPath: "/data"
  volumeClaimTemplates:
    - metadata:
        name: neo4j-pvc
        labels:
          app: neo4j-app
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 512Mi
