k8s/passwordless-service.yml
apiVersion: v1
kind: Service
metadata:
  name: passwordless-service
spec:
  type: ClusterIP
  selector:
    app: passwordless-app
  ports:
    - port: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: passwordless-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: passwordless-app
  template:
    metadata:
      labels:
        app: passwordless-app
    spec:
      containers:
        - name: passwordless-container
          image: kpatel20538/bookstore-app:passwordless
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: 256Mi
              cpu: 200m
            requests:
              memory: 256Mi
              cpu: 200m
