k8s/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: bookstore-ingress
  annotations:
    nginx.ingress.kubernetes.io/app-root: /static/index.html
spec:
  rules:
  - host: bookstore-kpatel20538.cloud.okteto.net
    http:
      paths:
      - path: /auth
        backend:
          serviceName: passwordless-service
          servicePort: 8080
      - path: /graphql
        backend:
          serviceName: api-service
          servicePort: 8080
      - path: /static
        backend:
          serviceName: minio
          servicePort: 9000
